--- a/index.html
+++ b/index.html
@@ -1,8 +1,42 @@
+
 <html>
-<link href="https://fonts.googleapis.com/css?family=Nunito:200,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:200&display=swap" rel="stylesheet">
+  <style>
+    font {
+      font-family: 'Nunito', sans-serif;
+      color: darkgray;
+      font-size: 34px;
+    }
+  </style>
+  <style>
+    font2{
+    font-family: 'Nunito', sans-serif;
+    color: white;
+    font-size: 25px;
+    }
+  </style>
+<center>
+  <font>Rpi686</font>
 <style>
-font {
-font-family: 'Nunito', sans-serif;
-}
-</style>
-<font>Rpi686</font>
+  body {
+    background-color: black;
+  }
+  </style>
+  <p></p>
+  <p></p>
+ <font2>A way to chroot into Ubuntu, Debian, and Kali Linux on Raspberry Pi</font2>
+  <p></p>
+  <font>Latest Version:</font>
+  <p></p>
+  <font>Rpi686 3.0 BETA 1</font>
+  <p></p>
+  <font>News:</font>
+  <p></p>
+  <font2>Rpi686 3.0 Final & Beta 2 Coming out October 1st</font2>
+  <p></p>
+  <font2>Rpi686 3.0 Will be a Debian Executable</font2>
+  <p></p>
+  <a href="https://github.com/SkywalkerSW5/Rpi686/archive/3.0-BETA-1.zip">
+  <font2>Download Rpi686 3.0 BETA 1 (Unstable)</font2>
+  </a>
+  </center>
