--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 
 <html>
+  <title>Rpi686</title>
   <link href="https://fonts.googleapis.com/css?family=Nunito:200&display=swap" rel="stylesheet">
   <style>
     font {
