--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       font-size: 34px;
     }
   </style>
+  
   <style>
     font2{
     font-family: 'Nunito', sans-serif;
@@ -17,6 +18,7 @@
     }
   </style>
 <center>
+  <font2>Rpi686 will be discontinued on October 4th, after the release of Rpi686 3.0.
   <font>Rpi686</font>
 <style>
   body {
