--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
   </style>
 <center>
-  <font2>Rpi686 will be discontinued on October 4th, after the release of Rpi686 3.0.</font2>
+  <font2>Rpi686 has been discontinued.</font2>
   <p></p>
   <font>Rpi686</font>
 <style>
